--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
         <lombok.version>1.16.12</lombok.version>
         <commons-lang3.version>3.5</commons-lang3.version>
         <guava.version>18.0</guava.version>
+        <spring-data-redis.version>1.7.7.RELEASE</spring-data-redis.version>
 
         <!-- prometheus -->
         <prometheus.version>0.0.21</prometheus.version>
@@ -52,6 +53,10 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-redis</artifactId>
         </dependency>
 
         <dependency>
