--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,14 @@
     </parent>
 
     <groupId>com.shanhh.bearychat</groupId>
-    <artifactId>bearychat-webhook</artifactId>
+    <artifactId>webhook-bearychat</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <java.version>1.8</java.version>
+        <docker.image.prefix>danshan</docker.image.prefix>
 
         <httpclient.version>4.5.2</httpclient.version>
         <lombok.version>1.16.12</lombok.version>
@@ -34,6 +35,7 @@
 
         <maven-compiler-plugin.version>3.1</maven-compiler-plugin.version>
         <coveralls-maven-plugin.version>4.3.0</coveralls-maven-plugin.version>
+        <docker-maven-plugin.version>0.4.13</docker-maven-plugin.version>
     </properties>
 
     <dependencyManagement>
@@ -113,7 +115,7 @@
     </dependencies>
 
     <build>
-        <finalName>bearychat-webhook</finalName>
+        <finalName>webhook-bearychat</finalName>
         <plugins>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
@@ -131,6 +133,22 @@
                         <arg>-Xlint:deprecation</arg>
                         <arg>-Xlint:unchecked</arg>
                     </compilerArgs>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>com.spotify</groupId>
+                <artifactId>docker-maven-plugin</artifactId>
+                <version>${docker-maven-plugin.version}</version>
+                <configuration>
+                    <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+                    <dockerDirectory>src/main/docker</dockerDirectory>
+                    <resources>
+                        <resource>
+                            <targetPath>/</targetPath>
+                            <directory>${project.build.directory}</directory>
+                            <include>${project.build.finalName}.jar</include>
+                        </resource>
+                    </resources>
                 </configuration>
             </plugin>
         </plugins>
